unpackaged/main/default/objects/ETT_StagingNewTyreCollection__c/ETT_StagingNewTyreCollection__c.object-meta.xml
<CustomObject>
    <label>Staging New Tyre Collection</label>
    <nameField>
        <displayFormat>SNTC-{00000}</displayFormat>
        <label>Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging New Tyre Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>