unpackaged/main/default/objects/ETT_StagingNewTyreCollection__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>ETT_Brand_Master__c</referenceTo>
    <relationshipLabel>Staging New Tyre Collections</relationshipLabel>
    <relationshipName>Staging_New_Tyre_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>