unpackaged/main/default/objects/ETT_StagingNewTyreCollection__c/fields/Collection_Card__c.field-meta.xml
<CustomField>
    <fullName>Collection_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Card</label>
    <referenceTo>ETT_Collection_Card__c</referenceTo>
    <relationshipLabel>Staging New Tyre Collections</relationshipLabel>
    <relationshipName>Staging_New_Tyre_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>