unpackaged/main/default/objects/ETT_StagingNewTyreCollection__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>ETT_Country_Master__c</referenceTo>
    <relationshipLabel>Staging New Tyre Collections</relationshipLabel>
    <relationshipName>Staging_New_Tyre_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>