unpackaged/main/default/objects/ETT_StagingNewTyreCollection__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>