unpackaged/main/default/objects/ETT_StagingNewTyreCollection__c/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Staging New Tyre Collections</relationshipLabel>
    <relationshipName>Staging_New_Tyre_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>