unpackaged/main/default/objects/ETT_StagingNewTyreCollection__c/fields/Pattern_Name__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pattern Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>