unpackaged/main/default/objects/ETT_StagingNewTyreCollection__c/fields/Tyre_Life__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Life__c</fullName>
    <label>Tyre Life</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>