unpackaged/main/default/objects/ETT_StagingNewTyreCollection__c/fields/Tyre_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Serial_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tyre Serial No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>