unpackaged/main/default/objects/ETT_StagingNewTyreCollection__c/fields/Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Size</label>
    <referenceTo>ETT_Tyre_Size_Master__c</referenceTo>
    <relationshipLabel>Staging New Tyre Collections</relationshipLabel>
    <relationshipName>Staging_New_Tyre_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>